<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/about_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <TextView
            android:id="@+id/psatext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:autoLink="web|email"
            android:gravity="center"
            android:text="@string/about_1"
            android:textAlignment="center"
            android:textSize="@dimen/about_text" />
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/psalogo" />
        <TextView
            android:id="@+id/toptext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"   
            android:autoLink="web|email"         
            android:gravity="center"
            android:text="@string/about_2"
            android:textAlignment="center"
            android:textSize="@dimen/about_text" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/wwlogo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:autoLink="web|email"
            android:gravity="center"
            android:text="@string/about_3"            
            android:textSize="@dimen/about_text" />
    </LinearLayout>

</ScrollView>